// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkbox > renders with ariaLabel correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button aria-label="Aria label" data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with as correctly 1`] = `
"<section class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</section>"
`;

exports[`checkbox > renders with class correctly 1`] = `
"<div class="inline-flex" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with defaultValue correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:check" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with description correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0" class="" data-pohon="checkbox-label">Label</label>
    <p class="" data-pohon="checkbox-description">Description</p>
  </div>
</div>"
`;

exports[`checkbox > renders with description slot correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0" class="" data-pohon="checkbox-label">Description slot</label>
    <!--v-if-->
  </div>
</div>"
`;

exports[`checkbox > renders with disabled correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-disabled="" disabled="">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with icon correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with id correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="id" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with indeterminate correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="mixed" aria-required="false" data-state="indeterminate"><span data-state="indeterminate" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:minus" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with indeterminateIcon correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="mixed" aria-required="false" data-state="indeterminate"><span data-state="indeterminate" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:trash" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with indicator end correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="1" aria-required="false" data-state="checked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with indicator hidden correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="1" aria-required="false" data-state="checked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with indicator start correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="1" aria-required="false" data-state="checked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with label correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0" class="" data-pohon="checkbox-label">Label</label>
    <!--v-if-->
  </div>
</div>"
`;

exports[`checkbox > renders with label slot correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0" class="" data-pohon="checkbox-label">Label slot</label>
    <!--v-if-->
  </div>
</div>"
`;

exports[`checkbox > renders with modelValue correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:check" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with name correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with neutral variant card correctly 1`] = `
"<label class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="1" aria-required="false" data-state="checked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</label>"
`;

exports[`checkbox > renders with neutral variant list correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="1" aria-required="false" data-state="checked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with primary variant card correctly 1`] = `
"<label class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="1" aria-required="false" data-state="checked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</label>"
`;

exports[`checkbox > renders with primary variant list correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="1" aria-required="false" data-state="checked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with required correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="true" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0" class="" data-pohon="checkbox-label">Label</label>
    <!--v-if-->
  </div>
</div>"
`;

exports[`checkbox > renders with size lg correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="1" aria-required="false" data-state="checked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with size md correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="1" aria-required="false" data-state="checked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with size sm correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="1" aria-required="false" data-state="checked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with size xl correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="1" aria-required="false" data-state="checked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with size xs correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="1" aria-required="false" data-state="checked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with ui correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with value correctly 1`] = `
"<div class="" data-pohon="checkbox-root">
  <div class="" data-pohon="checkbox-container"><button data-pohon="checkbox-base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;
